overflow solved

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
   padding: 0;
   margin: 0;
   background-color: rgb(53, 26, 77);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .container-page {
